# raytracer-cpp

./: .gitignore  CMakeLists.txt  README.md  TODO
apps/: CMakeLists.txt  cannon.cpp  cannon_ppm.cpp  clock.cpp  draw_scene.cpp  draw_scene2.cpp  draw_scene3.cpp  draw_sphere.cpp  timer.h
apps/cannon/: cannon.cpp  cannon_ppm.cpp  projectile.cpp  projectile.h  worldconditions.cpp  worldconditions.h
apps/clock/: clock.cpp
apps/scenes/: cover.cpp  cylinders.cpp  draw_scene.cpp  draw_scene2.cpp  draw_scene3.cpp  draw_sphere.cpp  reflect_refract.cpp  shadow_puppets.cpp  table.cpp  uv_mapping.cpp
src/: CMakeLists.txt  affine_transform.h  bounding_box.cpp  bounding_box.h  camera.cpp  camera.h  canvas.cpp  canvas.h  checkerpattern.cpp  checkerpattern.h  colour.h  common.h  constmath.h  cube.cpp  cube.h  gradientpattern.cpp  gradientpattern.h  hit.cpp  hit.h  init_list.h  intersection.cpp  intersection.h  intersections.h  material.cpp  material.h  matrix.h  meta.h  object.h  pattern.cpp  pattern.h  plane.cpp  plane.h  pointlight.h  projectile.cpp  projectile.h  ray.h  ringpattern.cpp  ringpattern.h  shape.cpp  shape.h  (+18 more)
src/impl/: bounding_box.cpp  bounding_box.h  cube_functions.cpp  cube_functions.h  hit.cpp  hit.h  instance_manager.cpp  instance_manager.h  intersection.cpp  intersection.h  ray.cpp  ray.h
src/patterns/: checkerpattern.cpp  checkerpattern.h  pattern.cpp  pattern.h  perlin.h  ringpattern.cpp  ringpattern.h  stripepattern.cpp  stripepattern.h
src/shapes/: cone.cpp  cone.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  group.cpp  group.h  plane.cpp  plane.h  shape.cpp  shape.h  shapefactory.cpp  shapefactory.h  sphere.cpp  sphere.h
test/: CMakeLists.txt  TestBounds.cpp  TestCamera.cpp  TestCanvas.cpp  TestColour.cpp  TestConcatenation.cpp  TestCone.cpp  TestCube.cpp  TestCylinder.cpp  TestGroup.cpp  TestIntersection.cpp  TestLights.cpp  TestMaterial.cpp  TestMath.cpp  TestMatrix.cpp  TestPattern.cpp  TestPattern.h  TestPlane.cpp  TestRay.cpp  TestShape.cpp  TestShape.h  TestSphere.cpp  TestTransform.cpp  TestTuple.cpp  TestVariantOps.cpp  TestWorld.cpp  main.cpp
